# luminesk-cli

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  rename.py
.agents/: AGENTS.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: lumilore.agent.md
.github/workflows/: ci.yml  deploy.yml  docs-ci.yml  release-pypi.yml  release.yml
assets/: install.ps1  install.sh
docs/: docusaurus.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.ts  tsconfig.json
docs/blog/: 2026-06-08-test.mdx  authors.yml  tags.yml
docs/docs/: command-reference.md  configuration-and-language.md  cores-and-upgrades.md  development-and-contributing.md  faq.md  getting-started.md  installation.md  intro.md  quick-start.md  runtime-and-docker.md  server-lifecycle.md  troubleshooting.md
docs/static/: robots.txt
luminesk/: __main__.py  main.py
luminesk/cli/: main.py
luminesk/core/: base.py  config.py  diagnostic.py  launcher.py  manager.py  messages.py  registry.py
luminesk/cores/: __init__.py  allay.py  better_altay.py  dragonfly.py  endstone.py  lumi.py  lunacy.py  nukkit.py  nukkit_mot.py  pnx.py  pocketmine.py  pumpkin.py  serenity.py
luminesk/models/: launcher.py  manager.py  registry.py
luminesk_cli/: __init__.py  __main__.py  main.py
scripts/: core_download_urls.py  format.py
tests/: test_config.py  test_diagnostic.py  test_docker.py  test_dont_create_config.py  test_downloads.py  test_github_releases.py  test_http.py  test_jenkins.py  test_launcher.py  test_manager_helpers.py  test_maven.py  test_messages.py  test_registry.py
(+121 files in other folders)
