[project]
name = "luminesk"
version = "1.0.0"
description = "Luminesk: MCBE server composer."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Taskov1ch", email = "sudo.taskov1ch@gmail.com" }]
keywords = [
  "cli",
  "docker",
  "lumi",
  "minecraft",
  "nukkit",
  "nukkit-mot",
  "powernukkitx",
  "tool",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "cyclopts>=4.20.0",
  "httpx>=0.28.1",
  "platformdirs>=4.10.0",
  "rich>=14.3.4",
]

[project.urls]
Homepage = "https://luminesk.taskov1ch.xyz"
Issues = "https://github.com/task-v1/luminesk-cli/issues"
Repository = "https://github.com/task-v1/luminesk-cli.git"

[project.scripts]
nesk = "luminesk.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.21.0"]
dev = ["mypy>=2.1.0", "pytest>=9.1.1", "pytest-cov>=5.0.0", "ruff>=0.15.20"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["luminesk*", "scripts*"]

[tool.uv]
package = true
